[package]
name = "mansion"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ItsEthra/mansion"
authors = ["ItsEthra"]
description = "Half-duplex TCP"
readme = "README.md"

[features]
client = []
server = []

[dependencies]
tokio = { version = "1.19", features = ["net", "io-util", "rt", "sync", "macros"] }
async-trait = "0.1"
bincode = "1.3"
flume = "0.10"
serde = "1.0"

[dev-dependencies]
tokio = { version = "1.19", features = ["net", "io-util", "rt", "sync", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }