[package]
name = "mansion"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/ItsEthra/mansion"
authors = ["ItsEthra"]
description = "Half-duplex TCP"
readme = "README.md"

[features]
client = []
server = []
encrypted = ["rsa", "x25519-dalek", "chacha20poly1305", "rand"]

[dependencies]
tokio = { version = "1.19", features = ["net", "io-util", "rt", "sync", "macros"] }
chacha20poly1305 = { version = "0.9", features = ["std"], optional = true }
cursored = { git = "https://github.com/ItsEthra/cursored" }
x25519-dalek = { version = "2.0.0-pre.1", optional = true }
rand = { version = "0.7", optional = true }
rsa = { version = "0.5", optional = true }
async-trait = "0.1"
bincode = "1.3"
flume = "0.10"
serde = "1.0"

[dev-dependencies]
tokio = { version = "1.19", features = ["net", "io-util", "rt", "sync", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }